--- a/src/Diamante/FrontBundle/Resources/assets/js/modules/Session/templates/registration.ejs
+++ b/src/Diamante/FrontBundle/Resources/assets/js/modules/Session/templates/registration.ejs
@@ -19,5 +19,5 @@
         <input type="password" class="form-control input-lg" name="password" id="password" placeholder="Enter Password">
     </div>
     <p>Already have an account? &mdash; <a href="#login">Sign in</a></p>
-    <button type="submit" class="btn btn-primary btn-lg btn-block js-submit">Continue</button>
+    <p><button type="submit" class="btn btn-primary btn-lg js-submit">Continue</button></p>
 </form>
