--- a/src/Diamante/FrontBundle/Resources/assets/js/modules/Session/templates/reset.ejs
+++ b/src/Diamante/FrontBundle/Resources/assets/js/modules/Session/templates/reset.ejs
@@ -18,6 +18,6 @@
     <input type="text" class="form-control input-lg" id="email" name="email" placeholder="Enter Email">
   </div>
   <p>Back to <a href="#login">Sign in</a></p>
-  <button type="submit" class="btn btn-primary btn-lg btn-block js-submit">Reset Password</button>
+  <p><button type="submit" class="btn btn-primary btn-lg js-submit">Reset Password</button></p>
 </form>
 <% } %>
