--- a/src/Diamante/FrontBundle/Resources/public/js/modules/Common/templates/alert.ejs
+++ b/src/Diamante/FrontBundle/Resources/public/js/modules/Common/templates/alert.ejs
@@ -2,6 +2,11 @@
   <div class="modal-content">
     <div class="modal-header">
       <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+      <% if(status == 'error'){ %>
+        <div class="status status-error">
+          <i class="fa fa-times"></i>
+        </div>
+      <% } %>
       <h4 class="modal-title"><%= title %></h4>
     </div>
     <div class="modal-body">
@@ -10,6 +15,9 @@
             <i class="fa fa-<%= message.status_icon %>"></i>&nbsp;<%= message.text %>
           </div>
       <% }); %>
+    </div>
+    <div class="modal-footer">
+      <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
     </div>
   </div><!-- /.modal-content -->
 </div><!-- /.modal-dialog -->
