DIAM-1375 remove shadow form edit and remove buttons

--- a/src/Diamante/FrontBundle/Resources/assets/less/modules/Comment/main.less
+++ b/src/Diamante/FrontBundle/Resources/assets/less/modules/Comment/main.less
@@ -34,6 +34,9 @@
     line-height: 1;
     padding: 0;
     color: #D8D8D8;
+    &:focus {
+      box-shadow: none;
+    }
     &:hover {
       color: @link-color;
     }
