--- a/src/Diamante/FrontBundle/Resources/assets/less/modules/Ticket/view.less
+++ b/src/Diamante/FrontBundle/Resources/assets/less/modules/Ticket/view.less
@@ -64,6 +64,9 @@
   .btn {
     padding: 4px 8px;
     margin: 4px -10px 0 0;
+    &:focus {
+      box-shadow: none;
+    }
   }
   i {
     border-bottom: 2px @mainColor solid;
