--- a/src/Diamante/FrontBundle/Resources/assets/less/modules/Watcher/main.less
+++ b/src/Diamante/FrontBundle/Resources/assets/less/modules/Watcher/main.less
@@ -2,8 +2,11 @@
   .btn {
     float: right;
     line-height: 1;
-    color: @text-color;
+    color: #D8D8D8;
     padding: 0;
+    &:focus {
+      box-shadow: none;
+    }
     &:hover {
       color: @link-color;
     }
