--- a/src/Diamante/FrontBundle/Resources/assets/less/modules/Attachment/main.less
+++ b/src/Diamante/FrontBundle/Resources/assets/less/modules/Attachment/main.less
@@ -88,6 +88,9 @@
     line-height: 1;
     color: #D8D8D8;
     padding: 0;
+    &:focus {
+      box-shadow: none;
+    }
     &:hover {
       color: @link-color;
     }
