--- a/src/Diamante/FrontBundle/Resources/public/js/modules/Attachment/templates/item.ejs
+++ b/src/Diamante/FrontBundle/Resources/public/js/modules/Attachment/templates/item.ejs
@@ -3,13 +3,13 @@
       <img src="<%= thumbnails.url %>" alt="<%= file.filename %>">
   <% } %>
   <ul class="attachment-tools pull-right">
-    <li><button class="btn btn-link js-delete-attachment" title="Delete Comment"><i class="fa
+    <li><button class="btn btn-link js-delete-attachment" title="Remove Attachment"><i class="fa
       fa-times"></i></button></li>
   </ul>
   <a href="<%= file.url %>" title="Download: <%= file.filename %>"><%= file.filename %></a>
 <% } else { %>
   <ul class="attachment-tools pull-right">
-    <li><button class="btn btn-link js-delete-attachment" title="Delete Comment"><i class="fa
+    <li><button class="btn btn-link js-delete-attachment" title="Remove Attachment"><i class="fa
       fa-times"></i></button></li>
   </ul>
   <a href="<%= base64 %>" title="Download: <%= filename %>"><%= filename %></a>
