--- a/src/Diamante/FrontBundle/Resources/assets/js/modules/Attachment/templates/dropzone.ejs
+++ b/src/Diamante/FrontBundle/Resources/assets/js/modules/Attachment/templates/dropzone.ejs
@@ -1,4 +1,4 @@
-<label class="dropzone-label hidden-xs" for="dropzone-input">Drop files here<br> to attach</label>
+<label class="dropzone-label hidden-xs" for="dropzone-input">Drop files here to attach</label>
 <label class="dropzone-label visible-xs" for="dropzone-input">Click here to attach files</label>
 <input type="file" name="attachmentsInput[]" class="dropzone-input" multiple />
 <div class="progress dropzone-progress dropzone-progress-reading">
