--- a/src/Diamante/FrontBundle/Resources/public/js/modules/Ticket/templates/view.ejs
+++ b/src/Diamante/FrontBundle/Resources/public/js/modules/Ticket/templates/view.ejs
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-xs-6 col-sm-12">
         <a class="btn btn-link btn-back js-back" href="<%= back_url %>">
-            <i class="fa fa-caret-left"></i>To all tickets
+            <i class="fa fa-caret-left"></i>View all tickets
         </a>
     </div>
     <div class="col-xs-6 col-sm-4 col-sm-push-8 col-md-3 col-md-push-9 ticket-action">
