--- a/src/Diamante/FrontBundle/Resources/public/js/modules/Ticket/templates/form.ejs
+++ b/src/Diamante/FrontBundle/Resources/public/js/modules/Ticket/templates/form.ejs
@@ -5,7 +5,7 @@
                class="form-control"
                id="subject"
                name="subject"
-               placeholder="Short summary of your ticket"
+               placeholder="Short ticket summary"
                value="<%= subject %>">
     </div>
     <div class="form-group required">
