--- a/src/Diamante/FrontBundle/Resources/assets/js/modules/Common/templates/alert.ejs
+++ b/src/Diamante/FrontBundle/Resources/assets/js/modules/Common/templates/alert.ejs
@@ -3,8 +3,16 @@
     <div class="modal-header">
       <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
       <% if(status == 'error'){ %>
-        <div class="status status-error">
+        <div class="status text-danger">
           <i class="fa fa-times"></i>
+        </div>
+      <% } else if (status == 'success'){ %>
+        <div class="status text-success">
+          <i class="fa fa-check"></i>
+        </div>
+      <% } else if (status == 'info'){ %>
+        <div class="status text-info">
+          <i class="fa fa-info"></i>
         </div>
       <% } %>
       <h4 class="modal-title"><%= title %></h4>
