--- a/src/Diamante/FrontBundle/Resources/assets/js/modules/Ticket/templates/form.ejs
+++ b/src/Diamante/FrontBundle/Resources/assets/js/modules/Ticket/templates/form.ejs
@@ -14,7 +14,7 @@
                   id="description"
                   name="description"
                   rows="5"
-                  placeholder="Type in detailed description of your ticket"><%= description %></textarea>
+                  placeholder="Provide a detailed description of your support request"><%= description %></textarea>
     </div>
     <div class="form-group">
         <label class="control-label" for="priority">Priority</label>
