--- a/src/Diamante/FrontBundle/Resources/assets/less/shared.less
+++ b/src/Diamante/FrontBundle/Resources/assets/less/shared.less
@@ -274,3 +274,16 @@ h1, .h1 {
     }
   }
 }
+
+.mce-container {
+  .tinymce-placeholder {
+    position: absolute;
+    padding: 8px;
+    width: 100%;
+    left:0;
+    right:0;
+    box-sizing: border-box;
+    white-space: normal;
+    color:#777;
+  }
+}
