--- a/src/Diamante/FrontBundle/Resources/assets/less/modules/Comment/attachments.less
+++ b/src/Diamante/FrontBundle/Resources/assets/less/modules/Comment/attachments.less
@@ -1,6 +1,7 @@
 .comment-attachments-block {
   border-top: 1px #e6e6e6 solid;
   padding-left: 26px;
+  padding-right: 5px;
   margin-bottom: @grid-gutter-width/2;
   &:before {
     .fa-icon();
@@ -19,10 +20,15 @@
   &:extend(.clearfix all);
   padding: 10px 0 0;
   border-radius: 5px;
+  overflow: hidden;
+  a {
+    display: block;
+  }
   img {
     display: block;
     max-width: 100%;
     margin-bottom: 5px;
+    vertical-align: top;
   }
   li {
     float:left;
