fix login view for firefox

--- a/src/Diamante/FrontBundle/Resources/assets/less/modules/Session/main.less
+++ b/src/Diamante/FrontBundle/Resources/assets/less/modules/Session/main.less
@@ -4,13 +4,14 @@
     margin:0 0 60px;
     background: url(../img/logo_auth.png) 0 0 no-repeat;
     background-size: cover;
-    img { opacity: 0 }
+    img { opacity: 0; max-width: 240px; }
   }
   
   #main {
     background: transparent;
     display: table;
     width: 240px;
+    height: 100%;
     padding: 0;
   }
 
