DIAM-1413 Fix button title

--- a/src/Diamante/DeskBundle/Resources/views/Branch/list.html.twig
+++ b/src/Diamante/DeskBundle/Resources/views/Branch/list.html.twig
@@ -10,8 +10,8 @@
         {{
             UI.addButton({
                 'path' : path('diamante_branch_create'),
-                'title' : 'diamante.desk.ui.create'|trans,
-                'label' : 'diamante.desk.ui.create'|trans
+                'title' : 'diamante.desk.branch.actions.create'|trans,
+                'label' : 'diamante.desk.branch.actions.create'|trans
             })
         }}
     {% endif %}
