DIAM-1235 add labels for user type

--- a/src/Diamante/UserBundle/Resources/views/User/Datagrid/Property/email.html.twig
+++ b/src/Diamante/UserBundle/Resources/views/User/Datagrid/Property/email.html.twig
@@ -1,1 +1,1 @@
-{{ value }} <span class="user-type {{ record.getValue('type') }}">{{ record.getValue('type_label') }}</span>
+{{ value }} <span class="diam-user-type {{ record.getValue('type') }}">{{ record.getValue('type_label') }}</span>
