--- a/src/Diamante/DeskBundle/Resources/public/css/diam.css
+++ b/src/Diamante/DeskBundle/Resources/public/css/diam.css
@@ -331,3 +331,23 @@ div[id^="grid-audit-grid"] td.number-cell {
     margin-right: 112px;
 }
 
+.diam-user-type {
+    padding: .2em .6em .3em;
+    font-size: 75%;
+    font-weight: 700;
+    line-height: 1;
+    color: #fff;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: baseline;
+    border-radius: .25em;
+}
+
+.diam-user-type.oro {
+    background-color: #3984B6;
+}
+
+.diam-user-type.diamante {
+    background-color: #1D2E81;
+}
+
