DIAM-1329 add extended popup during removing branch

--- a/src/Diamante/DeskBundle/Resources/views/Branch/list.html.twig
+++ b/src/Diamante/DeskBundle/Resources/views/Branch/list.html.twig
@@ -7,20 +7,18 @@
 
 {% block navButtons %}
     {% if resource_granted('CREATE', 'Entity:DiamanteDeskBundle:Branch') %}
-        {{
-            UI.addButton({
-                'path' : path('diamante_branch_create'),
-                'title' : 'diamante.desk.branch.actions.create'|trans,
-                'label' : 'diamante.desk.branch.actions.create'|trans
-            })
-        }}
+        {{ UI.addButton({
+            'path' : path('diamante_branch_create'),
+            'title' : 'diamante.desk.branch.actions.create'|trans,
+            'label' : 'diamante.desk.branch.actions.create'|trans
+        }) }}
     {% endif %}
     <script>
-        require(['jquery',  'oroui/js/mediator'],
-            function($, mediator) {
-                mediator.on('grid_render:complete', function (element) {
-                    $(element).addClass('diam-branch-grid')
+        require(['jquery', 'oroui/js/mediator'],
+                function ($, mediator) {
+                    mediator.on('grid_render:complete', function (element) {
+                        $(element).addClass('diam-branch-grid')
+                    });
                 });
-            });
     </script>
 {% endblock %}
