--- a/src/Diamante/DeskBundle/Resources/public/css/diam.widget.css
+++ b/src/Diamante/DeskBundle/Resources/public/css/diam.widget.css
@@ -140,3 +140,12 @@
 .diam-plot .legend text {
   fill: #fff;
 }
+
+.dashboard-widgets-wrapper .dashboard-widget-container .dashboard-widget-small-column:nth-child(2) {
+  width: 50px;
+}
+
+.dashboard-widgets-wrapper .dashboard-widget-container .dashboard-widget-icon {
+  width: 100%;
+  height: auto;
+}
